.workspace-data/cache/repo-33e59f1f5d53b03b/crates/next-custom-transforms/tests/errors/react-server-components/client-graph/root-params/input.js
// This is a comment.

'use strict'

/**
 * This is a comment.
 */

import { lang } from 'next/root-params'

export default function () {
  return null
}
